load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "telemetry",
    srcs = ["telemetry.go"],
    importpath = "github.com/pingcap/tidb/pkg/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/logutil",
        "@org_uber_go_zap//:zap",
    ],
)
